<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="org.dicekeys.trustedapp.activities.DiceKeyWithDerivedValue">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@android:color/black"
                app:cardCornerRadius="7dp"
                app:contentPadding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvRecipeFor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:text="@string/recipe_for_password"
                        android:textColor="@android:color/white"
                        android:textSize="22sp" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        app:cardCornerRadius="7dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <EditText
                                        android:id="@+id/etSequenceNumber"
                                        android:layout_width="50dp"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:background="@android:color/transparent"
                                        android:gravity="center"
                                        android:inputType="number"
                                        android:text="1"
                                        android:textColor="@color/cardview_dark_background"
                                        android:textSize="20sp" />

                                    <TextView
                                        android:layout_width="100dp"
                                        android:layout_height="fill_parent"
                                        android:gravity="center"
                                        android:lines="2"
                                        android:maxLines="2"
                                        android:text="@string/sequence_number" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="10dp"
                                    android:orientation="vertical">

                                    <View
                                        android:id="@+id/btn_up"
                                        android:layout_width="25dp"
                                        android:layout_height="25dp"
                                        android:background="@drawable/ic_arrow_up_down"
                                        android:rotation="-90" />

                                    <View
                                        android:id="@+id/btn_down"
                                        android:layout_width="25dp"
                                        android:layout_height="25dp"
                                        android:layout_marginTop="20dp"
                                        android:background="@drawable/ic_arrow_up_down"
                                        android:rotation="90" />
                                </LinearLayout>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="10dp"
                                    android:text="@string/str_multiple_passwords_info" />
                            </LinearLayout>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:background="@android:color/darker_gray" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Internal Representation of your recipe"
                                android:textColor="@android:color/background_dark"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/tvRecipeJson"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:textColor="@android:color/background_dark"
                                android:textSize="12sp" />

                            <Button
                                android:id="@+id/btnSaveRecipeInMenu"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:gravity="center"
                                android:text="@string/str_save_recipe_in_the_menu"
                                android:textAllCaps="false"
                                android:textColor="@android:color/holo_blue_dark"
                                android:textSize="18sp"
                                android:textStyle="normal" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvDice"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:padding="7dp"
            app:cardCornerRadius="7dp"
            app:layout_constraintBottom_toTopOf="@+id/cvPassword"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

            <ImageView
                android:id="@+id/dice_key_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="Dice" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_Copy_Password"
            app:layout_constraintTop_toBottomOf="@+id/cvDice">

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/diceViewBgColor"
                android:gravity="center"
                android:padding="7dp"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_Copy_Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@android:color/transparent"
            android:text="@string/copy_password"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_blue_light"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>